# specforge-factory

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.original.md  README.md  pyproject.toml
.pi/skills/setup/: SKILL.md
docs/: TODO.md
specforge/: __init__.py  __main__.py  cli.py  config.py  events.py  models.py  workflow.py
specforge/agents/: architect.py  coder.py  tester.py  verifier.py
specforge/docs/: evaluation-02.22.md  evaluation-02.23.md  fix-plan-empty-response.md  improvement-plan.md  plan-fix-remaining-issues.md
specforge/examples/: advanced-shortener-sqlite.md  bookmark-mng.md  todo-app-sqlite.md
specforge/prompts/: architect.py  coder.py  tester.py
specforge/providers/: __init__.py  pi_rpc.py
specforge/utils/: console.py
tests/: test_agent_events.py  test_coder_parse.py  test_config.py  test_dynamic_batches.py  test_events.py  test_models.py  test_project_validation.py  test_repair_fixes.py  test_run_config.py  test_tester_parse.py  test_venv_isolation.py  test_verifier.py  test_web_backend.py
web/: run.py
web/backend/: main.py
web/frontend/: index.html
